$Id: CHANGES,v 1.150 2001/12/24 12:31:12 stelian Exp $

Changes between versions 0.4b25 and 0.4b26 (released ?????????????????)
=======================================================================

1.	Added a set of backup scripts from Eugenio Diaz
	<getnito@yahoo.com> in the examples section. It features
	automatic (cron based) full and incremental dumping of
	several filesystems on a separate filesystem.

2.	Fixed a off-by-one miscalculation which disabled dumping
	a one letter subdirectory. Thanks to Chris Siebenmann 
	<cks@utcc.utoronto.ca> for reporting the bug.

3.	Fixed several restore bugs occuring when trying to
	restore some missing files on the tape. Thanks to Chris
	Siebenmann <cks@utcc.utoronto.ca> for reporting the bug.

Changes between versions 0.4b24 and 0.4b25 (released November 17, 2001)
=======================================================================

1.	Added a mini howto from Patrick Walsh in the examples 
	directory.

2.	Minor man pages syntax corrections. Thanks to
	Chris Danis <screechco@home.com> for reporting the bugs.

3.	Added a script from David B. Peterson <dave@toppledwagon.com>
	to the examples section. It features dumping several
	filesystems to a remote tape drive upon ssh.

4.	Added a patch provided by Richard Jones <rich@annexia.org>
	which allows BRADEMAX (number of read errors tolerated by
	dump) to be adjusted using the -I option.

5.	Fixed a bug which disabled doing "restore -C -f -". Thanks
        to Clemens Stiglechner <a9401816@unet.univie.ac.at> for the
	patch.

6.	Add the -l option to restore to specify if, when doing a
        remote restore, the file used to access the backup is a
	regular file (the defaults being a tape drive). Restore needs
	to know this information when reading a remote compressed 
	dump. Previously, this information was autodetected, but
	the autodetection code fails (with ioctl: Inappropriate ioctl 
	for device) when using a non Linux remote box. Thanks to 